# AnimalRoomTaskManager

./: .gitignore  AnimalRoomTaskManagerERDiagram.graphml  CMakeLists.txt  Normalizer.cpp  Normalizer.h  README.md  attribute_definitions.csv  functional_dependencies.txt  main.cpp  pubspec.yaml  room_check_and_task_record_sql_generator.py  schema.sql  schema.txt
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: admin_transfer_page.dart  facility_repository.dart  main.dart  theme_data.dart  user_list_model.dart  user_management_screen.dart  user_use_case.dart
lib/animal_management/: animal_management_model.dart  animal_management_screen.dart  animal_repository.dart
lib/building_management/: add_building_page.dart  building_management_model.dart  building_management_screen.dart  building_repository.dart
lib/census/: census_model.dart  census_repository.dart  census_screen.dart
lib/facility_management/: add_facility_screen.dart  facility_management_model.dart  facility_management_screen.dart  facility_repository.dart
lib/lab_management/: add_lab_screen.dart  lab_editor_screen.dart  lab_management_model.dart  lab_management_screen.dart  lab_repository.dart
lib/login_screen/: login_screen.dart  login_use_case.dart
lib/postgresql_client/: Database.dart
lib/query/: query_model.dart  query_repository.dart  query_screen.dart
lib/room_check/: record_repository.dart  room_check_model.dart  (+3 more)
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+40 files in other folders)
